// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CollectionBadges /> component should match snapshot with badges 1`] = `
<DocumentFragment>
  <div
    class="collectionContainer relative dib w-100"
  >
    Test
    <div
      class="inline-flex justify-end absolute w-100 bottom-0 left-0"
    >
      <div
        class="item mh1 pa2 bg-blue white tc"
      >
        badge1
      </div>
      <div
        class="item mh1 pa2 bg-blue white tc"
      >
        badge2
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CollectionBadges /> component should match snapshot without badges 1`] = `
<DocumentFragment>
  <div
    class="collectionContainer relative dib w-100"
  >
    Test
    <div
      class="inline-flex justify-end absolute w-100 bottom-0 left-0"
    />
  </div>
</DocumentFragment>
`;
